[tool.poetry]
name = "pyboids"
version = "1.0.0"
description = "Boids simulation in pygame."
authors = ["Jack Wetherell <jack.wetherell@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.4"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
